--- a/sehirtanitim/Base.lproj/Main.storyboard
+++ b/sehirtanitim/Base.lproj/Main.storyboard
@@ -1,24 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HB4-B4-vxb">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="Djm-mq-hqa">
+            <objects>
+                <viewController id="t3N-V0-oug" customClass="ViewController" customModule="sehirtanitim" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lfJ-Xg-tc5" customClass="viewcontroler">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yuy-J0-YsZ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="z4O-tA-Oue"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yuy-J0-YsZ" firstAttribute="leading" secondItem="z4O-tA-Oue" secondAttribute="leading" id="0ye-64-EIZ"/>
+                            <constraint firstItem="z4O-tA-Oue" firstAttribute="trailing" secondItem="yuy-J0-YsZ" secondAttribute="trailing" id="75o-cX-htg"/>
+                            <constraint firstItem="z4O-tA-Oue" firstAttribute="bottom" secondItem="yuy-J0-YsZ" secondAttribute="bottom" id="JCD-4P-Iog"/>
+                            <constraint firstItem="yuy-J0-YsZ" firstAttribute="top" secondItem="z4O-tA-Oue" secondAttribute="top" id="x4o-ZO-skG"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3o0-II-NsO"/>
+                    <connections>
+                        <outlet property="tableview" destination="yuy-J0-YsZ" id="Hrq-cx-eGQ"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="todetailvc" id="2TY-1M-h49"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BMC-nl-IBR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1388" y="94"/>
+        </scene>
+        <!--View Controllerdetails-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewControllerdetails" customModule="sehirtanitim" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zbc-KW-LMv">
+                                <rect key="frame" x="41" y="111" width="333" height="256"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="şehir ismi" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C86-P3-M9R">
+                                <rect key="frame" x="75" y="438" width="251" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="RXz-fV-qNR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="şehir bölgesi" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cs-cq-E1z">
+                                <rect key="frame" x="98" y="661" width="213" height="106"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="106" id="CZ9-ke-7xs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zbc-KW-LMv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EQF-ib-QEn"/>
+                            <constraint firstItem="zbc-KW-LMv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="41" id="FsP-53-Wdd"/>
+                            <constraint firstItem="zbc-KW-LMv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="67" id="MDt-LM-fxO"/>
+                            <constraint firstItem="C86-P3-M9R" firstAttribute="top" secondItem="zbc-KW-LMv" secondAttribute="bottom" constant="71" id="Tog-hq-rHD"/>
+                            <constraint firstItem="6cs-cq-E1z" firstAttribute="top" secondItem="C86-P3-M9R" secondAttribute="bottom" constant="63" id="Vis-kV-k0M"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="C86-P3-M9R" secondAttribute="trailing" constant="88" id="Ztz-G8-o5f"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6cs-cq-E1z" secondAttribute="trailing" constant="103" id="eZ2-dB-KQi"/>
+                            <constraint firstItem="6cs-cq-E1z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="98" id="gc6-dI-JLK"/>
+                            <constraint firstItem="C86-P3-M9R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="nOc-P9-Xld"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6cs-cq-E1z" secondAttribute="bottom" constant="95" id="tpP-NP-lce"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="p9Y-rr-Y9y"/>
+                    <connections>
+                        <outlet property="image" destination="zbc-KW-LMv" id="xql-Rh-GdX"/>
+                        <outlet property="sehirbolgesi" destination="6cs-cq-E1z" id="UJa-c8-X4n"/>
+                        <outlet property="sehirismi" destination="C86-P3-M9R" id="Pgh-Id-1ry"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="213" y="96"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8lQ-61-JXf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HB4-B4-vxb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5pJ-3w-bpb">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="t3N-V0-oug" kind="relationship" relationship="rootViewController" id="aXR-lv-qby"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gkd-BO-nFv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-749.27536231884062" y="95.758928571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
